--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    font-family: sans-serif;
+    padding: 0;
     scroll-behavior: smooth;
 }
 
@@ -9,6 +9,7 @@ body {
     font-size: 3.1vh;
     color: rgb(29, 202, 86);
     min-width: 200px;
+    font-family: sans-serif;
 
 }
 
@@ -41,7 +42,7 @@ h1 {
 .menu button {
     background-color: black;
     border: none;
-    padding: 1rem;
+    padding: 2.5rem;
     cursor: pointer;
     margin: 0 1.5vw;
     border-top-left-radius: 1.5rem;
@@ -62,6 +63,7 @@ h1 {
     text-decoration: none;
     color: rgb(230, 1, 77);
     padding: 0.5rem;
+    text-transform: uppercase;
 }
 
 .menu button:hover a {
@@ -76,6 +78,10 @@ h1 {
 .text {
     padding: 1rem;
     text-decoration: none;
+}
+
+ul li {
+    list-style: none;
 }
 
 .photo {
