--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,16 @@ ul li {
     100% {transform: rotate(360deg);}
 }
 
+@media only screen and (max-width: 1200px) {
+    
+    .menu button {
+        min-width: 165px;
+        padding: 1rem;
+        transition: 0.3s;
+    }
+    
+}
+
 @media only screen and (max-width: 900px) {
 
     body {
