--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    box-sizing: border-box;
 }
 
 body {
@@ -10,78 +11,10 @@ body {
     color: rgb(29, 202, 86);
     min-width: 200px;
     font-family: sans-serif;
-
-}
-
-header {
-    height: 35vh;
-    background-image: url(../img/photo-on-side/code.jpg);
-    border-bottom: 0.5vh black solid;
-    background-position: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-footer {
-    height: 10vh;
-    background-color: rgb(10, 9, 9);
 }
 
 h1 {
     font-family: 'Kanit', sans-serif;
-}
-
-.menu {
-    margin: 6vh 0;
-    min-height: 40vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.menu button {
-    background-color: black;
-    border: none;
-    padding: 2.5rem;
-    cursor: pointer;
-    margin: 0 1.5vw;
-    border-top-left-radius: 1.5rem;
-    border-bottom-right-radius: 1.5rem;
-    box-shadow: 5px 3px 3px rgb(48, 48, 48);
-    transition: all .3s ease-in-out;
-}
-
-.menu button:hover {
-    border-top-right-radius: 1.5rem;
-    border-bottom-left-radius: 1.5rem;
-    transform: scale(1.1);
-
-}
-
-.menu button a {
-    font-size: 2rem;
-    text-decoration: none;
-    color: rgb(230, 1, 77);
-    padding: 0.5rem;
-    text-transform: uppercase;
-}
-
-.menu button:hover a {
-    color: rgb(29, 202, 86);;
-}
-
-.content {
-    border-top: 0.5vh solid black;
-    border-bottom: 0.5vh solid black;
-}
-
-.text {
-    padding: 1rem;
-    text-decoration: none;
-}
-
-ul li {
-    list-style: none;
 }
 
 .photo {
@@ -89,102 +22,157 @@ ul li {
     background-position: center;
 }
 
-.goUp {
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+header {
+    height: 35vh;
+    background-image: url(../img/photo-on-side/code.jpg);
+    border-bottom: 0.5vh black solid;
+    background-position: center;
+    margin: 0 auto;
+}
+
+header .navbar {
+    min-height: 40vh;
     display: flex;
-    justify-content: end;
-    position: relative;
-    vertical-align: bottom;
-    padding: 0.5rem;
-
+    align-items: center;
+    justify-content: center;
 }
 
-.goUp img:hover {
+.navbar button {
+    background-color: black;
+    padding: 2.5rem;
+    margin: 0 1.5vw;
+    border-top-left-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
+    box-shadow: 5px 3px 3px rgb(48, 48, 48);
+    border: 1px solid rgb(230, 1, 77);
+    transition: all .3s linear;
+    cursor: pointer;
+}
+
+.navbar button:hover {
+    border-top-right-radius: 1.5rem;
+    border-bottom-left-radius: 1.5rem;
     transform: scale(1.1);
+
 }
 
-.conMedia div{
-    float: left;
-    margin: 1em 1em;
+.navbar button a {
+    font-size: 2rem;
+    text-decoration: none;
+    color: rgb(230, 1, 77);
+    padding: 0.5rem;
+    text-transform: uppercase;
 }
 
-.conMedia div img {
-    width: 100%;
+.navbar button:hover a {
+    color: rgb(29, 202, 86);
+
 }
 
-.conMedia div img:hover {
-    animation: rotate360 6s;
+
+main #offer ul li {
+    list-style: none;
 }
 
-.mediaP {
-    width: 10rem;
-    height: 10rem;
-    margin: 0 5rem;
-}
-
-#offer {
+main #offer {
     min-height: 85vh;
     border-bottom: 0.5vh solid black;
 
 }
 
-#photoOffer {
+main #photoOffer {
     background-image: url(../img/photo-on-side/offer.jpg);
 }
 
-#price {
+main #aboutMe {
+    min-height: 55vh;
+    border-bottom: 0.5vh solid black;
+}
+
+main #price {
     min-height: 85vh;
     border-bottom: 0.5vh solid black;
 
 }
 
-#photoPrice {
+main #photoPrice {
     background-image: url(../img/photo-on-side/price.jpg);
 }
 
-#aboutMe {
-    min-height: 55vh;
-    border-bottom: 0.5vh solid black;
+footer {
+    background-color: rgb(10, 9, 9);
 }
 
-#contact {
+
+footer #contact {
     min-height: 55vh;
 
 }
+
+footer .social {
+    margin: 2vw auto;
+}
+
+footer .social a {
+    display: block;
+    float: left;
+    margin: 0 5vw;
+}
+
+footer .social img {
+    max-width: 120px;
+}
+
+footer .social img:hover {
+    animation: rotate360 .5s;
+}
+
+
 
 @keyframes rotate360 {
-    0% {transform: rotate(0);}
-    10% {transform: rotate(360deg);}
-    100% {transform: rotate(360deg);}
+    0% {
+        transform: rotate(0);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
-@media only screen and (max-width: 1200px) {
-    
-    .menu button {
+@media (max-width: 1200px) {
+
+    .navbar button {
         min-width: 165px;
         padding: 1rem;
         transition: 0.3s;
     }
-    
+
 }
 
-@media only screen and (max-width: 900px) {
+@media (max-width: 900px) {
 
     body {
         font-size: 3.3vw;
     }
 
-    .menu {
+    .navbar {
         clear: both;
         display: block;
         align-items: center;
     }
 
-    .menu button {
+    .navbar button {
         margin: 0.4em 0;
         width: 100%;
     }
 
-    .mediaP {
+    .social {
         width: 15%;
         height: 15%;
         margin: 0 5rem;
@@ -195,8 +183,8 @@ ul li {
     }
 }
 
-@media only screen and (max-width: 100px) {
-    .mediaP {
+@media only screen and (max-width: 300px) {
+    .social {
         display: none;
     }
 }
