--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 body {
     background-color: rgb(14, 13, 13);
-    font-size: 3.1vh;
+    font-size: 32px;
     color: rgb(29, 202, 86);
     min-width: 200px;
     font-family: sans-serif;
@@ -20,6 +20,7 @@ h1 {
 .photo {
     min-height: 35vh;
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 .clearfix::after {
@@ -29,8 +30,8 @@ h1 {
 }
 
 header {
-    height: 35vh;
-    background-image: url(../img/photo-on-side/code.jpg);
+    min-height: 35vh;
+    background-image: url(../img/photo-on-site/code.jpg);
     border-bottom: 0.5vh black solid;
     background-position: center;
     margin: 0 auto;
@@ -45,7 +46,7 @@ header .navbar {
 
 .navbar button {
     background-color: black;
-    padding: 2.5rem;
+    padding: 25px 60px;
     margin: 0 1.5vw;
     border-top-left-radius: 1.5rem;
     border-bottom-right-radius: 1.5rem;
@@ -63,7 +64,8 @@ header .navbar {
 }
 
 .navbar button a {
-    font-size: 2rem;
+    display: block;
+    font-size: 22px;
     text-decoration: none;
     color: rgb(230, 1, 77);
     padding: 0.5rem;
@@ -75,9 +77,9 @@ header .navbar {
 
 }
 
-
-main #offer ul li {
-    list-style: none;
+.content {
+    padding-bottom: 24px;
+    margin: 0 1.5vw;
 }
 
 main #offer {
@@ -87,7 +89,7 @@ main #offer {
 }
 
 main #photoOffer {
-    background-image: url(../img/photo-on-side/offer.jpg);
+    background-image: url(../img/photo-on-site/offer.jpg);
 }
 
 main #aboutMe {
@@ -102,17 +104,19 @@ main #price {
 }
 
 main #photoPrice {
-    background-image: url(../img/photo-on-side/price.jpg);
+    background-image: url(../img/photo-on-site/price.jpg);
+}
+
+main ul li {
+    list-style: none;
 }
 
 footer {
     background-color: rgb(10, 9, 9);
 }
 
-
 footer #contact {
     min-height: 55vh;
-
 }
 
 footer .social {
@@ -122,7 +126,9 @@ footer .social {
 footer .social a {
     display: block;
     float: left;
-    margin: 0 5vw;
+    margin: 0 auto;
+    width: 25%;
+    text-align: center;
 }
 
 footer .social img {
@@ -132,8 +138,6 @@ footer .social img {
 footer .social img:hover {
     animation: rotate360 .5s;
 }
-
-
 
 @keyframes rotate360 {
     0% {
@@ -148,43 +152,41 @@ footer .social img:hover {
 @media (max-width: 1200px) {
 
     .navbar button {
-        min-width: 165px;
-        padding: 1rem;
-        transition: 0.3s;
+        padding: 15px 30px;
     }
-
 }
 
 @media (max-width: 900px) {
 
     body {
-        font-size: 3.3vw;
+        font-size: 24px;
     }
 
-    .navbar {
-        clear: both;
-        display: block;
-        align-items: center;
-    }
-
-    .navbar button {
-        margin: 0.4em 0;
-        width: 100%;
-    }
-
-    .social {
-        width: 15%;
-        height: 15%;
-        margin: 0 5rem;
-    }
-
-    .goUp {
-        display: none;
+    .navbar button a {
+        font-size: 18px;
     }
 }
 
-@media only screen and (max-width: 300px) {
-    .social {
-        display: none;
+@media (max-width: 750px) {
+
+    header .navbar {
+        display: block;
+        margin: 0 10vw;
+    }
+
+    .navbar button {
+        width: 100%;
+        margin: 5vw auto;
+    }
+
+    @media (max-width: 550px) {
+        footer .social a {
+            width: 50%;
+            margin: 2vw 0;
+        }
+
+        .content {
+            margin: 0 3vw;
+        }
     }
 }
